# Sysmon

./: .gitignore  README.md  pyproject.toml
docs/: design.md
src/: collector.py  display.py  logger.py  main.py
tests/: test_collector.py  test_logger.py
