[project]
name = "sysmon"
version = "0.1.0"
description = "Sysmon project for "
authors = [{ name = "Maze shama bashamaim" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "rich",
    "psutil"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "collector", "display", "logger"]

[project.scripts]
run_sysmon = "main:main"